[gd_scene load_steps=16 format=3 uid="uid://drf1peu5uslk4"]

[ext_resource type="Script" uid="uid://cq7cboq7cayw0" path="res://Scripts/Buttons/GamepadUI.gd" id="1_ku0c6"]
[ext_resource type="Script" uid="uid://cigkylilyd1vu" path="res://Scripts/feedbackMenu.gd" id="1_xkb1h"]
[ext_resource type="FontFile" uid="uid://b51e4e1htly8h" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="2_i3kbq"]
[ext_resource type="Script" uid="uid://dma16kredqnfv" path="res://Scripts/floating_ui.gd" id="3_7lrt3"]
[ext_resource type="Script" uid="uid://bqqupisq6shwj" path="res://Scripts/floating_section.gd" id="3_irc0v"]
[ext_resource type="Script" uid="uid://cl0pyahtusv85" path="res://addons/tattomoosa.spinner/spinner.gd" id="6_67bkr"]
[ext_resource type="Script" uid="uid://d1uprgeoiokkj" path="res://addons/DiscordWebhook/WebhookCreator.gd" id="7_xyjko"]
[ext_resource type="Texture2D" uid="uid://d0tr1o0ljdemt" path="res://Assets/Icons/send.svg" id="8_ku0c6"]
[ext_resource type="Script" uid="uid://di4cltbqi0734" path="res://Scripts/Buttons/shadow_texture_button.gd" id="8_t7nnl"]
[ext_resource type="PackedScene" uid="uid://dwg5gvl6rrjeg" path="res://Scenes/Menus/BackButton.tscn" id="9_ku0c6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_02sbc"]

[sub_resource type="LabelSettings" id="LabelSettings_r0ep2"]
font = ExtResource("2_i3kbq")
font_size = 46
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 15
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_67bkr"]
font = ExtResource("2_i3kbq")
font_size = 24
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 15
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="Gradient" id="Gradient_ku0c6"]
interpolation_mode = 1
colors = PackedColorArray(0.270222, 0.270222, 0.270222, 1, 0.294118, 0.294118, 0.294118, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_67bkr"]
gradient = SubResource("Gradient_ku0c6")

[node name="FeedbackScene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("FirstControl")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ku0c6")
FirstControl = NodePath("Feedback/BackButton")

[node name="Feedback" type="Control" parent="Control" node_paths=PackedStringArray("discord_webhook")]
process_mode = 3
z_index = 100
material = SubResource("ShaderMaterial_02sbc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = 160.0
offset_right = -9.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
script = ExtResource("1_xkb1h")
discord_webhook = NodePath("HTTPRequest")
popup_font = ExtResource("2_i3kbq")

[node name="Title" type="Label" parent="Control/Feedback"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.398
anchor_right = 0.602
anchor_bottom = 0.061
offset_left = -182.667
offset_top = -510.0
offset_right = 185.333
offset_bottom = -464.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_i3kbq")
theme_override_font_sizes/font_size = 56
text = "FEEDBACK"
label_settings = SubResource("LabelSettings_r0ep2")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_7lrt3")

[node name="FeedbackType" type="Control" parent="Control/Feedback"]
layout_mode = 3
anchors_preset = 0
offset_left = 126.0
offset_top = 79.3333
offset_right = 166.0
offset_bottom = 119.333
script = ExtResource("3_irc0v")
vertical_intensity = 10.0
horizontal_speed = 0.2
horizontal_intensity = 5
metadata/_custom_type_script = "uid://bqqupisq6shwj"

[node name="TypeTitle" type="Label" parent="Control/Feedback/FeedbackType"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.398
anchor_right = 0.602
anchor_bottom = 0.061
offset_left = -161.253
offset_top = -426.667
offset_right = 259.587
offset_bottom = -381.107
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_i3kbq")
theme_override_font_sizes/font_size = 56
text = "TYPE"
label_settings = SubResource("LabelSettings_67bkr")
vertical_alignment = 1
script = ExtResource("3_7lrt3")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="FeedbackSelection" type="OptionButton" parent="Control/Feedback/FeedbackType"]
layout_mode = 0
offset_left = -145.0
offset_top = -369.0
offset_right = 540.0
offset_bottom = -309.0
theme_override_fonts/font = ExtResource("2_i3kbq")
theme_override_font_sizes/font_size = 24
allow_reselect = true

[node name="Description" type="Control" parent="Control/Feedback"]
layout_mode = 3
anchors_preset = 0
offset_left = 126.0
offset_top = 101.333
offset_right = 166.0
offset_bottom = 141.333
script = ExtResource("3_irc0v")
vertical_intensity = 10.0
horizontal_speed = 0.2
horizontal_intensity = 5
metadata/_custom_type_script = "uid://bqqupisq6shwj"

[node name="DescriptionTitle" type="Label" parent="Control/Feedback/Description"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.398
anchor_right = 0.602
anchor_bottom = 0.061
offset_left = -166.587
offset_top = -303.333
offset_right = 254.253
offset_bottom = -257.773
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_i3kbq")
theme_override_font_sizes/font_size = 56
text = "DESCRIPTION"
label_settings = SubResource("LabelSettings_67bkr")
vertical_alignment = 1
script = ExtResource("3_7lrt3")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="TextContainer" type="TextEdit" parent="Control/Feedback/Description"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.207
anchor_top = 0.292
anchor_right = 0.793
anchor_bottom = 0.708
offset_left = -157.28
offset_top = -258.68
offset_right = 515.28
offset_bottom = 115.68
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_i3kbq")
theme_override_font_sizes/font_size = 24
placeholder_text = "FEEDBACK_TEXT"
context_menu_enabled = false
emoji_menu_enabled = false
wrap_mode = 1

[node name="CharactersCount" type="Label" parent="Control/Feedback/Description"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.018
anchor_bottom = 1.32
offset_left = 399.333
offset_top = 73.3336
offset_right = 707.613
offset_bottom = 133.534
scale = Vector2(0.4, 0.4)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_i3kbq")
theme_override_font_sizes/font_size = 56
text = "0/200"
label_settings = SubResource("LabelSettings_r0ep2")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Thumbnail" type="Control" parent="Control/Feedback"]
layout_mode = 3
anchors_preset = 0
offset_left = 8.66667
offset_top = -28.0
offset_right = 48.6667
offset_bottom = 12.0
script = ExtResource("3_irc0v")
vertical_intensity = 10.0
horizontal_speed = 0.2
horizontal_intensity = 5
metadata/_custom_type_script = "uid://bqqupisq6shwj"

[node name="ScreenshotSelected" type="TextureRect" parent="Control/Feedback/Thumbnail"]
layout_mode = 0
offset_left = -784.667
offset_top = -192.667
offset_right = -79.6666
offset_bottom = 269.333
texture = SubResource("GradientTexture1D_67bkr")
expand_mode = 2

[node name="Spinner" type="Range" parent="Control/Feedback/Thumbnail"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = true
custom_minimum_size = Vector2(16, 16)
layout_direction = 0
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -486.667
offset_top = -19.3333
offset_right = -358.667
offset_bottom = 108.667
grow_horizontal = 1
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 100.0
step = 1.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
script = ExtResource("6_67bkr")
color_progress = Color(1, 1, 1, 1)
metadata/_custom_type_script = "uid://cl0pyahtusv85"

[node name="Send" type="Control" parent="Control/Feedback"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_irc0v")
metadata/_custom_type_script = "uid://bqqupisq6shwj"

[node name="SendButton" type="TextureButton" parent="Control/Feedback/Send"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.751
anchor_top = 0.712
anchor_right = 0.789
anchor_bottom = 0.779
offset_left = 649.293
offset_top = 160.853
offset_right = 807.773
offset_bottom = 318.173
grow_horizontal = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_ku0c6")
script = ExtResource("8_t7nnl")
metadata/_custom_type_script = "uid://di4cltbqi0734"

[node name="BackButton" parent="Control/Feedback" instance=ExtResource("9_ku0c6")]
offset_left = -860.0
offset_top = -537.333
offset_right = -860.0
offset_bottom = -537.333

[node name="HTTPRequest" type="HTTPRequest" parent="Control/Feedback"]
script = ExtResource("7_xyjko")

[connection signal="text_changed" from="Control/Feedback/Description/TextContainer" to="Control/Feedback" method="_on_text_container_text_changed"]
[connection signal="focus_entered" from="Control/Feedback/Send/SendButton" to="Control/Feedback/Send/SendButton" method="_on_mouse_entered"]
[connection signal="focus_exited" from="Control/Feedback/Send/SendButton" to="Control/Feedback/Send/SendButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Control/Feedback/Send/SendButton" to="Control/Feedback/Send/SendButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/Feedback/Send/SendButton" to="Control/Feedback/Send/SendButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Control/Feedback/Send/SendButton" to="Control/Feedback" method="_on_send_button_pressed"]
[connection signal="toggled" from="Control/Feedback/Send/SendButton" to="Control/Feedback/Send/SendButton" method="_on_toggled"]
[connection signal="pressed" from="Control/Feedback/BackButton/Button" to="Control/Feedback" method="_on_back_button_pressed"]
[connection signal="request_completed" from="Control/Feedback/HTTPRequest" to="Control/Feedback/HTTPRequest" method="OnRequestCompleted"]

[editable path="Control/Feedback/BackButton"]
